--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="event">
                 <h2>9/25<br>Call the Principal!</h2>
                 <div class="container-fluid details">
-                    <a href="https://www.google.com">
+                    <a href="https://www.themoviedb.org/movie/28182-birth-rite">
                         <img src="img/birth_rite.jpg" class="img-fluid cover-image" alt="Birth Rite DVD Cover Art">
                     </a>
                     <p class="time">8:00 PM</p>
