--- a/index.html
+++ b/index.html
@@ -25,102 +25,100 @@
             <!-- SECOND EVENT -->
             <div class="event">
                 <h2>10/3<br>Fuckin' Witches</h2>
-                <div class="container-fluid details">
-                    <a href="https://www.themoviedb.org/movie/6069-the-witches-of-eastwick">
-                        <img src="img/witches_of_eastwick.jpg" class="img-fluid cover-image" alt="The Witches of Eastwick Cover Art">
-                    </a>
-                    <p class="time">3:00 PM</p>
-                </div>
-                <div class="container-fluid details">
-                    <a href="https://www.themoviedb.org/movie/10439-hocus-pocus">
-                        <img src="img/hocus_pocus.jpg" class="img-fluid cover-image" alt="Hocus Pocus Cover Art">
-                    </a>
-                    <p class="time">5:00 PM</p>
-                </div>
-                <div class="container-fluid details">
-                    <a href="https://www.themoviedb.org/movie/9100-the-craft">
-                        <img src="img/the_craft.jpg" class="img-fluid cover-image" alt="The Craft Cover Art">
-                    </a>
-                    <p class="time">7:00 PM</p>
+                <div class="films">
+                    <div class="container-fluid details">
+                        <a href="https://www.themoviedb.org/movie/6069-the-witches-of-eastwick">
+                            <img src="img/witches_of_eastwick.jpg" class="img-fluid cover-image" alt="The Witches of Eastwick Cover Art">
+                        </a>
+                        <p class="time">3:00 PM</p>
+                    </div>
+                    <div class="container-fluid details">
+                        <a href="https://www.themoviedb.org/movie/10439-hocus-pocus">
+                            <img src="img/hocus_pocus.jpg" class="img-fluid cover-image" alt="Hocus Pocus Cover Art">
+                        </a>
+                        <p class="time">5:00 PM</p>
+                    </div>
+                    <div class="container-fluid details">
+                        <a href="https://www.themoviedb.org/movie/9100-the-craft">
+                            <img src="img/the_craft.jpg" class="img-fluid cover-image" alt="The Craft Cover Art">
+                        </a>
+                        <p class="time">7:00 PM</p>
+                    </div>
                 </div>
             </div>
 
             <!-- THIRD EVENT -->
             <div class="event">
                 <h2>10/10<br>I <span>HATE</span> Klowns</h2>
-                <div class="container-fluid details">
-                    <a href="https://www.themoviedb.org/movie/16296-killer-klowns-from-outer-space">
-                        <img src="img/kkfos.jpg" class="img-fluid cover-image" alt="Killer Klowns from Outer Space Cover Art">
-                    </a>
-                    <p class="time">3:00 PM</p>
-                </div>
-                <div class="container-fluid feature">
-                    <div class="row">
-                        <div class="col details">
-                            <a href="https://www.themoviedb.org/tv/19614-it">
-                                <img src="img/it.jpg" class="img-fluid cover-image" alt="IT Cover Art">
-                            </a>
-                            <p class="time">Part 1</p>
-                            <p class="time">5:00 PM</p>
-                        </div>
+                <div class="films">
+                    <div class="container-fluid details">
+                        <a href="https://www.themoviedb.org/movie/16296-killer-klowns-from-outer-space">
+                            <img src="img/kkfos.jpg" class="img-fluid cover-image" alt="Killer Klowns from Outer Space Cover Art">
+                        </a>
+                        <p class="time">3:00 PM</p>
                     </div>
-                </div>
-                <div class="container-fluid feature">
-                    <div class="row">
-                        <div class="col details">
-                            <a href="https://www.themoviedb.org/tv/19614-it">
-                                <img src="img/it.jpg" class="img-fluid cover-image" alt="IT Cover Art">
-                            </a>
-                            <p class="time">Part 2</p>
-                            <p class="time">7:00 PM</p>
-                        </div>
+                    <div class="container-fluid details">
+                        <a href="https://www.themoviedb.org/tv/19614-it">
+                            <img src="img/it.jpg" class="img-fluid cover-image" alt="IT Cover Art">
+                        </a>
+                        <p class="time">5:00 PM (Part 1)</p>
+                    </div>
+                    <div class="container-fluid details">
+                        <a href="https://www.themoviedb.org/tv/19614-it">
+                            <img src="img/it.jpg" class="img-fluid cover-image" alt="IT Cover Art">
+                        </a>
+                        <p class="time">7:00 PM (Part 2)</p>
                     </div>
                 </div>
             </div>
 
             <!-- FOURTH EVENT -->
-            <div class="event">
+            <div class="event">feature
                 <h2>10/17<br>Terror Tropes</h2>
-                <div class="container-fluid details">
-                    <a href="https://www.themoviedb.org/movie/4232-scream">
-                        <img src="img/scream.jpg" class="img-fluid cover-image" alt="Scream Cover Art">
-                    </a>
-                    <p class="time">3:00 PM</p>
-                </div>
-                <div class="container-fluid details">
-                    <a href="https://www.themoviedb.org/movie/4247-scary-movie">
-                        <img src="img/scary_movie.jpg" class="img-fluid cover-image" alt="Scary Movie Cover Art">
-                    </a>
-                    <p class="time">5:00 PM</p>
-                </div>
-                <div class="container-fluid details">
-                    <a href="https://www.themoviedb.org/movie/22970-the-cabin-in-the-woods">
-                        <img src="img/cabin_in_the_woods.jpg" class="img-fluid cover-image" alt="The Cabin in the Woods Cover Art">
-                    </a>
-                    <p class="time">7:00 PM</p>
+                <div class="films">
+                    <div class="container-fluid details">
+                        <a href="https://www.themoviedb.org/movie/4232-scream">
+                            <img src="img/scream.jpg" class="img-fluid cover-image" alt="Scream Cover Art">
+                        </a>
+                        <p class="time">3:00 PM</p>
+                    </div>
+                    <div class="container-fluid details">
+                        <a href="https://www.themoviedb.org/movie/4247-scary-movie">
+                            <img src="img/scary_movie.jpg" class="img-fluid cover-image" alt="Scary Movie Cover Art">
+                        </a>
+                        <p class="time">5:00 PM</p>
+                    </div>
+                    <div class="container-fluid details">
+                        <a href="https://www.themoviedb.org/movie/22970-the-cabin-in-the-woods">
+                            <img src="img/cabin_in_the_woods.jpg" class="img-fluid cover-image" alt="The Cabin in the Woods Cover Art">
+                        </a>
+                        <p class="time">7:00 PM</p>
+                    </div>
                 </div>
             </div>
 
             <!-- FIFTH EVENT -->
             <div class="event">
                 <h2>10/24<br>Brutal Bitches</h2>
-                <div class="container-fluid details">
-                    <a href="https://www.themoviedb.org/movie/16871-drag-me-to-hell">
-                        <img src="img/drag_me_to_hell.jpg" class="img-fluid cover-image" alt="Drag Me to Hell Cover Art">
-                    </a>                    
-                    <p class="time">3:00 PM</p>
-                </div>
-                <div class="container-fluid details">
-                    <a href="https://www.themoviedb.org/movie/7340-carrie">
-                        <img src="img/carrie.jpg" class="img-fluid cover-image" alt="Carrie Cover Art">
-                    </a>
-                    <p class="time">5:00 PM</p>
-                </div>
-                <div class="container-fluid details">
-                    <a href="https://www.themoviedb.org/movie/9374-death-becomes-her">
-                        <img src="img/death_becomes_her.jpg" class="img-fluid cover-image" alt="Death Becomes Her Cover Art">
-                    </a>
-                    <p class="time">7:00 PM</p>
+                <div class="films">
+                    <div class="container-fluid details">
+                        <a href="https://www.themoviedb.org/movie/16871-drag-me-to-hell">
+                            <img src="img/drag_me_to_hell.jpg" class="img-fluid cover-image" alt="Drag Me to Hell Cover Art">
+                        </a>                    
+                        <p class="time">3:00 PM</p>
+                    </div>
+                    <div class="container-fluid details">
+                        <a href="https://www.themoviedb.org/movie/7340-carrie">
+                            <img src="img/carrie.jpg" class="img-fluid cover-image" alt="Carrie Cover Art">
+                        </a>
+                        <p class="time">5:00 PM</p>
+                    </div>
+                    <div class="container-fluid details">
+                        <a href="https://www.themoviedb.org/movie/9374-death-becomes-her">
+                            <img src="img/death_becomes_her.jpg" class="img-fluid cover-image" alt="Death Becomes Her Cover Art">
+                        </a>
+                        <p class="time">7:00 PM</p>
+                    </div>
                 </div>
             </div>
         </main>
