Add halloween event

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>The Live-Screaming Horror Picture Show</title>
 </head>
 <body>
-        <header class="container-fluid">
+        <header>
             <h1>The<br>LIVE-Screaming<br>Horror Picture Show</h1>
         </header>
 
@@ -24,7 +24,7 @@
 
             <!-- SECOND EVENT -->
             <div class="event">
-                <h2>10/3<br>Fuckin' Witches</h2>
+                <h2>10/3<br>Suburban Pagans</h2>
                 <div class="films">
                     <div class="container-fluid details">
                         <a href="https://www.themoviedb.org/movie/6069-the-witches-of-eastwick">
@@ -49,7 +49,7 @@
 
             <!-- THIRD EVENT -->
             <div class="event">
-                <h2>10/10<br>I <span>HATE</span> Klowns</h2>
+                <h2>10/10<br>I <span>HATE</span> Clowns</h2>
                 <div class="films">
                     <div class="container-fluid details">
                         <a href="https://www.themoviedb.org/movie/16296-killer-klowns-from-outer-space">
@@ -74,7 +74,7 @@
 
             <!-- FOURTH EVENT -->
             <div class="event">feature
-                <h2>10/17<br>Terror Tropes</h2>
+                <h2>10/17<br>That's So Meta</h2>
                 <div class="films">
                     <div class="container-fluid details">
                         <a href="https://www.themoviedb.org/movie/4232-scream">
@@ -99,25 +99,50 @@
 
             <!-- FIFTH EVENT -->
             <div class="event">
-                <h2>10/24<br>Brutal Bitches</h2>
+                <h2>10/24<br>Deader is Better</h2>
                 <div class="films">
                     <div class="container-fluid details">
-                        <a href="https://www.themoviedb.org/movie/16871-drag-me-to-hell">
-                            <img src="img/drag_me_to_hell.jpg" class="img-fluid cover-image" alt="Drag Me to Hell Cover Art">
+                        <a href="https://www.themoviedb.org/movie/6552-idle-hands">
+                            <img src="img/idle_hands.jpg" class="img-fluid cover-image" alt="Idle Hands Cover Art">
                         </a>                    
                         <p class="time">3:00 PM</p>
-                    </div>
-                    <div class="container-fluid details">
-                        <a href="https://www.themoviedb.org/movie/7340-carrie">
-                            <img src="img/carrie.jpg" class="img-fluid cover-image" alt="Carrie Cover Art">
-                        </a>
-                        <p class="time">5:00 PM</p>
                     </div>
                     <div class="container-fluid details">
                         <a href="https://www.themoviedb.org/movie/9374-death-becomes-her">
                             <img src="img/death_becomes_her.jpg" class="img-fluid cover-image" alt="Death Becomes Her Cover Art">
                         </a>
+                        <p class="time">5:00 PM</p>
+                    </div>
+                    <div class="container-fluid details">
+                        <a href="https://www.themoviedb.org/movie/609-poltergeist">
+                            <img src="img/poltergeist.jpg" class="img-fluid cover-image" alt="Poltergeist Cover Art">
+                        </a>
                         <p class="time">7:00 PM</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- SIXTH EVENT -->
+            <div class="event">
+                <h2>10/31<br>Halloween Hors D'oeuvres</h2>
+                <div class="films">
+                    <div class="container-fluid details">
+                        <a href="https://www.themoviedb.org/movie/306964-tales-of-halloween">
+                            <img src="img/tales_of_halloween.jpg" class="img-fluid cover-image" alt="Tales of Halloween Cover Art">
+                        </a>
+                        <p class="time">1:00 PM</p>
+                    </div>
+                    <div class="container-fluid details">
+                        <a href="https://www.themoviedb.org/movie/9976-satan-s-little-helper">
+                            <img src="img/satans_little_helper.jpg" class="img-fluid cover-image" alt="Satan's Little Helper Cover Art">
+                        </a>
+                        <p class="time">3:00 PM</p>
+                    </div>
+                    <div class="container-fluid details">
+                        <a href="https://www.themoviedb.org/movie/23202-trick-r-treat">
+                            <img src="img/trick_r_treat.jpg" class="img-fluid cover-image" alt="Trick 'r Treat Hands Cover Art">
+                        </a>                    
+                        <p class="time">5:00 PM</p>
                     </div>
                 </div>
             </div>
